# PRISM-Med-Benchmark-Open

./: .gitignore  CITATION.cff  LICENSE  PROJECT_LAYOUT.md  README.es.md  README.fr.md  README.md  README.zh-CN.md  model_config.py  prism_bootstrap.py  requirements.txt  run_prism_benchmark.py  run_prism_full_benchmark.bat
benchmark/: reference_table_bias_with_doi.xlsx
config/: __init__.py  legacy_script_config.py
dataset/: README.md
docs/: BENCHMARK.md
img/: README.md
lib/: __init__.py  ask_llm_client.py  async_runtime.py  base_ask_answer_paths.py  base_ask_progress.py  benchmark_column_names.py  benchmark_paths.py  benchmark_sdoh_utils.py  bias_count_common.py  case_dataset_io.py  chat2llm.py  classification_benchmark_common.py  classification_benchmark_pipeline.py  count_llm_client.py  count_stage_health.py  count_stage_runner.py  extract_json_from_txt.py  flaws_excel.py  llm_connection_utils.py  (+5 more)
prism_benchmark/: PY_WHITELIST.md  README.md  pyproject.toml
prism_benchmark/configs/: data_requirements.json  default.json
prism_benchmark/scripts/: benchmark_coverage.py  benchmark_run_report.py  benchmark_verify.py  data_assets_check.py  list_missing_cases.py  prepare_full_benchmark_data.py  retry_base_ask_failures.py  run_pipeline.py
prism_benchmark/src/prism_benchmark/: __init__.py  composite.py  config.py  legacy_registry.py  pathing.py  pipeline.py  steps.py
prism_benchmark/src/prism_benchmark/stages/: __init__.py  _invoke.py  _model_scope.py  base_ask_stage.py  classification_stage.py  metrics_stage.py  reasoning_stage.py  sdoh_stage.py
(+27 files in other folders)
