[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-benchmark"
version = "0.1.0"
description = "Open-source oriented benchmark pipeline for complex medical diagnosis LLM evaluation."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "xlsxwriter>=3.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

